<resources>
    <string name="app_name">StagingAmaT</string>
    <string name="facebook_app_id" translatable="false">114136507314337</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb114136507314337</string>
    <string name="google_api_client_id" translatable="false">669264691830-24p4t5fsdlgsd95auvocmjvrrmkvv500.apps.googleusercontent.com</string>
    <string name="google_gmail_release" translatable="false">release_client_auth_id_from_google_api_console</string>
    <string name="google_map_realsekey" translatable="false">AIzaSyDSCB2Lo-ff-lwzSb9URtMhw0LnwxocHUs</string>
    <string name="google_map_debug" translatable="false">AIzaSyDSCB2Lo-ff-lwzSb9URtMhw0LnwxocHUs</string>
    <string name="key_for_places" translatable="false">AIzaSyDSCB2Lo-ff-lwzSb9URtMhw0LnwxocHUs</string>
    <string name="admob_appid" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="my_Interstitial_Add" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="version" translatable="false">2.2</string>
    <string name="device" translatable="false">android</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_fb">SIGN UP WITH FACEBOOK</string>
    <string name="theme4_font_bold" translatable="false">theme4fonts/googlesansbold.ttf</string>
    <string name="sign_up_google">SIGN UP WITH GOOGLE</string>
    <string name="change_password">Change Password</string>
    <string name="verification">Verification</string>
    <string name="conformation_desc">Please confirm your country code and enter your phone number</string>
    <string name="confirm">Confirm</string>
    <string name="sms_desc">We sent you an access code via sms for mobile number verification</string>
    <string name="enter_code">Enter code here</string>
    <string name="history">History</string>
    <string name="deals">Deals</string>
    <string name="account">Account</string>
    <string name="default_notification_channel_id">channel-01</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="add_payment_method">ADD PAYMENT METHOD</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="save">Save</string>
    <string name="add_payment">Add Payment Method</string>
    <string name="card_hint">Card Number</string>
    <string name="billing_address_hint">Billing Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip</string>
    <string name="card_name_hint">Name On Card</string>
    <string name="cvc_hint">CVV</string>
    <string name="date_hint">Validity (09/21)</string>
    <string name="add_new_address">Add new Address</string>
    <string name="add_address">Add Delivery Address</string>
    <string name="house_hint">Street Address</string>
    <string name="add_loc">Add Location</string>
    <string name="inst_hint">Instructions</string>
    <string name="hello_ted">Hello Ted</string>
    <string name="order_now">Order Now</string>
    <string name="check_out">Check Out</string>
    <string name="show_restaurant">Show Stores &amp; Restaurants</string>
    <string name="welcome_txt">Welcome! Where should we deliver to?</string>
    <string name="edit_account">Edit Account</string>
    <string name="recover_pass">Recover Password</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="login_statement" translatable="false">Already have an account? Login</string>
    <string name="recover">Recover</string>
    <string name="email_hint"><font size="14">Jhon@gmail.com</font></string>
    <string name="password_hint"><font size="14">At least 6 character</font></string>
    <string name="f_name"><font size="14">John</font></string>
    <string name="l_name"><font size="14">Smith</font></string>
    <string name="deal_content">Sorry. This store doesn’t offer any deal at this moment.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_deal_text">Sorry. This store doesn’t offer any deal at this moment.</string>
    <string name="uan_txt">Customer care (support@amatnow.com)</string>
    <string name="uan">support@amatnow.com</string>
    <string name="rest_not_open">Currently shop is not open.</string>
    <string name="options">Options</string>
    <string name="food_name">Item Name</string>
    <string name="food_description">Item description</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="special_instruction_optional">Special Instruction (Optional)</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="hotel_name">Hotel name</string>
    <string name="location_address">Location address</string>
    <string name="save_location">Save Location</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="send_code">Send Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="resend_code">Resend Code?</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="type_here">Type here</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="enter_code_here">Enter Code Here</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="accepted_orders">Accepted Orders</string>
    <string name="cancel">Cancel</string>
    <string name="whoops">Whoops!</string>
    <string name="desc_here">Desc Here</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="delivery">Delivery</string>
    <string name="pick_up">Pick Up</string>
    <string name="add_rider_tip">Add Rider Tip</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="clear">Clear</string>
    <string name="select_delivery_time">Select Delivery Time</string>
    <string name="discount">Discount</string>
    <string name="there_is_no_cart_data">There is no Cart data.</string>
    <string name="delivery_date_and_time">Delivery date and time</string>
    <string name="select_delivery_date_and_time_to_ncontinue">Select delivery date and time to\ncontinue</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="edit_date">Edit Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="edit_time">Edit Time</string>
    <string name="continue_txt">Continue</string>
    <string name="please_wait">Please Wait...</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? Click below to register</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="title">Title</string>
    <string name="some_instructions">Some Instructions</string>
    <string name="order_detail">ORDER DETAIL</string>
    <string name="order_hotel_detail">ORDER HOTEL DETAIL</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="order_user_detail">ORDER USER DETAIL</string>
    <string name="user_name">User name</string>
    <string name="order_payment_details">ORDER PAYMENT DETAILS</string>
    <string name="rider_tip">Rider Tip</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="track_order">Track Order</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="type_review_optional">Type Review (Optional)</string>
    <string name="submit">Submit</string>
    <string name="suggestions">Suggestions</string>
    <string name="search_restaurant">Search Restaurant &amp; Stores</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_found_for_this_restaurant">No Reviews found for this store</string>
    <string name="weekly_earning">Weekly Earning</string>
    <string name="track_now">Track Now</string>
    <string name="search_country">Search Country</string>
    <string name="favorites">Favorites</string>
    <string name="let_us_know_where_are_you_so_we_can_recommend_nearby_events">Let us know where are you so we can recommend nearby events.</string>
    <string name="your_location_here">Your location here</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_of_use_and_privacy_policy">Terms of Use and Privacy Policy</string>
    <string name="change_your_account_information">Change your account information</string>
    <string name="add_or_edit_payment_method">Add or edit Payment Method</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_or_edit_delivery_address">Add or edit delivery address</string>
    <string name="other">OTHER</string>
    <string name="log_out">Log Out</string>
    <string name="not_be_empty">Not be empty</string>
    <string name="select_the_card_validity">Select the Card validity</string>
    <string name="done">Done</string>
    <string name="restuarents">Shops</string>
    <string name="orders">Orders</string>
    <string name="accounts">Accounts</string>
    <string name="select_speciality">Select Category</string>
    <string name="search_restaurant_speciality">Search Store Category</string>
    <string name="enter_tip_here">Enter Tip Here</string>
    <string name="please_enter_the_ammount">Please Enter the ammount</string>
    <string name="please_enter_the_promocode">Please Enter the Promocode</string>
    <string name="coupon_already_been_added">Coupon Already Been Added</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="call_us">Call Us</string>
    <string name="press_call_to_dial_our_uan_number">Press call to dial our UAN number.</string>
    <string name="language">Language</string>
    <string name="delete_cart">Delete Cart?</string>
    <string name="are_you_sure_to_delete_cart">Are you sure you want to delete cart?</string>
    <string name="discard">Discard</string>
    <string name="thanks_for_review">Thanks for review</string>
    <string name="give_your_reviews">Give Your Reviews</string>
    <string name="search_restuarents_menu">Search Restaurant Menu</string>
    <string name="out_of_order">Out of order</string>
    <string name="changing_restuarents">Changing to another Store?</string>
    <string name="whould_you_like_to_change_order">Would you like to change your order and start new order?</string>
    <string name="select_all_required_items">Select All Required Items</string>
    <string name="order_filter">Order Filter</string>
    <string name="current_orders">Current Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="delivery_address_can_not_empty">Delivery Address can\'t be empty</string>
    <string name="you_have_reached_your_free_delivery_order">You have reached your free delivery order.</string>
    <string name="you_have_to_need_more">\"You have to need more \"</string>
    <string name="for_free_delivery_order">\" for free delivery order.\"</string>
    <string name="checkout">Checkout</string>
    <string name="enable_location">Enable location</string>
</resources>